# projeto-final-ebac-backend

./: .dockerignore  .env  .gitignore  Dockerfile  README-en.md  README.md  convertedComments.json  convertedPosts.json  convertedUsers.json  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  import_mocks.py  pyproject.toml  structure.txt
accounts/: pagination.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/models/: user.py
accounts/serializers/: __init__.py  change_password_serializer.py  custom_token_serializer.py  delete_account_serializer.py  profile_update_serializer.py  signup_serializer.py  user_serializer.py
accounts/tests/: factories.py  test_auth_views.py  test_profile_views.py
accounts/views/: __init__.py  change_password_view.py  custom_token_view.py  delete_account_view.py  signup_view.py
accounts/viewsets/: user_viewset.py
comments/: pagination.py  signals.py  urls.py
comments/migrations/: 0001_initial.py  0002_alter_comment_options_remove_comment_updated_at.py
comments/models/: comments.py
comments/serializers/: comment_serializer.py
comments/tests/: factories.py  test_comment_views.py
comments/viewsets/: __init__.py  comment_viewset.py
config/: settings.py  urls.py
config/pagination/: cursor_pagination.py
follows/: urls.py
follows/migrations/: 0001_initial.py
follows/models/: __init__.py  follower.py
follows/serializers/: __init__.py  (+1 more)
hashtags/: urls.py
likes/: urls.py
notifications/: apps.py  pagination.py  signals.py  urls.py
posts/: apps.py  pagination.py  signals.py  urls.py
(+38 files in other folders)
